Update madlibs; fix new task responsiveness
This commit addresses the updates requested in Issue #56.
The workflow is now the same in the new opportunity modal,
the task show view, and the task edit view.

I've moved the description to the end as per issue #56,
however it looks weird because the first input has
a lot of white space.

The modal has been updated to be responsive, and each
of the elements automatically resizes to the correct
proportions.

This also addresses issue #49.  At this point, every
component of the application is now responsive and
viewable on any sized device.

--- a/assets/styles/application.css
+++ b/assets/styles/application.css
@@ -688,7 +688,10 @@ a.like-button:hover {
 	font-weight: bold;
 }
 
-input.fullwidth {
+#event-start,
+#event-end,
+#div-event-start-time > input.fullwidth,
+#div-event-end-time > input.fullwidth {
 	padding-left: 2px;
 	padding-right: 2px;
 	text-align: center;
@@ -892,33 +895,10 @@ ul.task-tags > li {
 	font-size: 10px;
 }
 
-.task-view {
-	margin-top: 10px;
-}
-
-#addTask .modal-dialog {
-	width: 890px;
-}
-
-input#task-title {
-	margin-bottom: 10px;
-	border: 1px #ccc solid;
-	padding: 5px;
-}
-
-textarea#task-description {
-	border: 1px #ccc solid;
-	padding: 5px;
-}
-
 .task-show-description {
 	font-size: 18px;
 	margin-bottom: 10px;
 	line-height: 1.5em;
-}
-
-.task-show-description strong input {
-	margin-bottom: 5px;
 }
 
 .task-edit-description {
@@ -938,38 +918,25 @@ textarea#task-description {
 	font-weight: bold;
 }
 
-.task-location {
-	width: 200px;
-}
-
-.task-skills {
-	width: 100%;
-	line-height: 1.4em;
-	margin-top: 5px;
-}
-
-.task-topics {
-	width: 100%;
-	clear: both;
-	margin: 0 0 15px 0;
-}
-
-#task-description {
-	width: 100%;
-	height: 65px;
-}
-
-.task-people {
-	margin: 0 0 5px 0;
-}
-
-.task-length {
-	margin: 5px 0 0 0;
-}
-
 /*****************
 =  TASKS MADLIBS FORM
 ******************/
+#task-form {
+	line-height: 2.1em;
+}
+
+#task-form .select2-container-multi {
+	line-height: 1.2em;
+}
+
+#task-form label {
+	font-weight: 300;
+}
+
+#task-form .dropdown {
+	margin-top: -7px;
+}
+
 #task-form input.fullwidth {
 	width: 100%;
 }
@@ -978,12 +945,39 @@ textarea#task-description {
 	width: 100%;
 }
 
-#task-form #topics {
-	width: 200px;
+@media (max-width: 978px) {
+	#task-form .col-md-12 {
+		padding-left: 0;
+		padding-right: 0;
+	}
 }
 
 #task-form #section-1, #task-form #section-2, #task-form #section-3, #task-form #section-4 {
-	min-height: 150px;
+	min-height: 210px;
+}
+
+#task-form #people {
+	width: 110px;
+}
+
+#task-form #skills-required {
+	width: 120px;
+}
+
+#task-form #time-estimate {
+	width: 168px;
+}
+
+#task-form #time-required {
+	width: 98px;
+}
+
+#task-form #length {
+	width: 125px;
+}
+
+#task-form #task-location {
+	width: 168px;
 }
 
 /*****************
